--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start -p 4000",
     "lint": "next lint",
     "generate": "next generate"
